# dev

./: .gitmodules  CLAUDE.md  README.md
.temp_repos/compiler/libs/compiler/: Cargo.toml  README.md  package.json  pnpm-lock.yaml  project.json  tsconfig.json
.temp_repos/compiler/libs/compiler/scripts/: postbuild-dts.js  postbuild-generate-docs.js
.temp_repos/compiler/libs/compiler/src/: lib.rs
.temp_repos/compiler/libs/compiler/src/ast/: ast_tests.rs  core.rs  error.rs  instrumenter.rs  mod.rs  orchestrator.rs  parser.rs  stitcher.rs  utils.rs
.temp_repos/compiler/libs/compiler/src/compiler/: compiler_tests.rs  core.rs  input.rs  mod.rs  output.rs  project_runner.rs
.temp_repos/compiler/libs/compiler/src/contract/: core.rs  mod.rs
.temp_repos/compiler/libs/compiler/src/internal/: config.rs  errors.rs  logging.rs  mod.rs  path.rs  project.rs  settings.rs  solc.rs  vyper.rs
.temp_repos/compiler/libs/compiler/src/types/: extensions.ts  solc-ast.d.ts  solc-settings.d.ts  solc-storage-layout.d.ts
.temp_repos/compiler/libs/compiler/test/: GUIDE.md  ast.spec.ts  compiler.foundry.spec.ts  compiler.hardhat.spec.ts  compiler.spec.ts  contract.spec.ts  integration.setup.ts  integrations.spec.ts  logger.spec.ts  typecheck.spec.ts
.temp_repos/compiler/libs/compiler/test/__snapshots__/: ast.spec.ts.snap  compiler.spec.ts.snap
.temp_repos/compiler/libs/compiler/test/fixtures/ast/: empty_source_unit.json  fragment_without_contract.json
.temp_repos/compiler/libs/compiler/test/fixtures/contracts/: BrokenExample.sol  CompoundCErc20.sol  ERC721A.sol  InlineExample.sol  (+8 more)
(+380 files in other folders)
